Страницы сайта: ссылки в меню (вопрос, вопросы, категория, страница).

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -61,60 +61,60 @@
 <body>
 
     <div id="menu" class="dark-section">
-    <button class="menu-close-button close-button">
-        <svg viewbox="0 0 40 40">
-            <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
-        </svg>
-    </button>
-    <nav>
-        <div class="title">Меню</div>
-        <ul class="menu main-menu pull-left">
-            <li class="active"><a href="index.html"><span>Главная</span></a></li>
-            <li><a href="page.html"><span>О сайте</span></a></li>
-            <li>
-                <a href="category.html">
-                    <span>Автоистория</span>
-                    <i class="fa fa-caret-down open-dropdown"></i>
-                </a>
-                <ul>
-                    <li><a href="page.html">История Daewoo</a></li>
-                    <li><a href="page.html">История Nissan</a></li>
-                    <li><a href="page.html">История ВАЗ</a></li>
-                    <li><a href="page.html">История Mazda</a></li>
-                    <li><a href="page.html">История Shkoda</a></li>
-                </ul>
-            </li>
-            <li><a href="category.html"><span>Статьи</span></a></li>
-            <li><a href="category.html"><span>Советы</span></a></li>
-            <li><a href="category.html"><span>Гараж</span></a></li>
-            <li><a href="#"><span>Вопрос-ответ</span></a></li>
-            <li><a href="#"><span>Бортовой журнал</span></a></li>
-        </ul>
+        <button class="menu-close-button close-button">
+            <svg viewbox="0 0 40 40">
+                <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
+            </svg>
+        </button>
+        <nav>
+            <div class="title">Меню</div>
+            <ul class="menu main-menu pull-left">
+                <li class="active"><a href="index.html"><span>Главная</span></a></li>
+                <li><a href="page.html"><span>О сайте</span></a></li>
+                <li>
+                    <a href="category.html">
+                        <span>Автоистория</span>
+                        <i class="fa fa-caret-down open-dropdown"></i>
+                    </a>
+                    <ul>
+                        <li><a href="page.html">История Daewoo</a></li>
+                        <li><a href="page.html">История Nissan</a></li>
+                        <li><a href="page.html">История ВАЗ</a></li>
+                        <li><a href="page.html">История Mazda</a></li>
+                        <li><a href="page.html">История Shkoda</a></li>
+                    </ul>
+                </li>
+                <li><a href="category.html"><span>Статьи</span></a></li>
+                <li><a href="category.html"><span>Советы</span></a></li>
+                <li><a href="category.html"><span>Гараж</span></a></li>
+                <li><a href="questions.html"><span>Вопрос-ответ</span></a></li>
+                <li><a href="#"><span>Бортовой журнал</span></a></li>
+            </ul>
 
-        <div class="title">Информация</div>
-        <ul class="menu info-menu">
-            <li><a href="#">Правила сайта</a></li>
-            <li><a href="#">ЧаВо</a></li>
-            <li><a href="#">Награды</a></li>
-            <li><a href="#">Как задать вопрос?</a></li>
-            <li><a href="#">Как создать статью?</a></li>
-        </ul>
-        <ul class="menu contact-menu m-t-20">
-            <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
-            <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
-        </ul>
-    </nav>
+            <div class="title">Информация</div>
+            <ul class="menu info-menu">
+                <li><a href="#">Правила сайта</a></li>
+                <li><a href="#">ЧаВо</a></li>
+                <li><a href="#">Награды</a></li>
+                <li><a href="#">Как задать вопрос?</a></li>
+                <li><a href="#">Как создать статью?</a></li>
+            </ul>
+            <ul class="menu contact-menu m-t-20">
+                <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
+                <li><a href="#"><i class="fa fa-sitemap"></i>Карта сайта</a></li>
+            </ul>
+        </nav>
 
-    <div class="title">Мы в социальных сетях:</div>
-    <div class="social-links">
-        <ul class="pull-left horisontal">
-            <li><a href="#"><i class="fa fa-vk"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
-        </ul>
+        <div class="title">Мы в социальных сетях:</div>
+        <div class="social-links">
+            <ul class="pull-left horisontal">
+                <li><a href="#"><i class="fa fa-vk"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
+            </ul>
+        </div>
     </div>
-</div>
 
     <div id="panel">
         <header>
@@ -501,7 +501,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="questions.html">
                                                 <span>Вопрос-ответ</span>
                                             </a>
                                         </li>
@@ -552,7 +552,7 @@
                     <section id="content" class="white-section">
                         <ul class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
                             <li class="home-page" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-                                <a href="http://avtorem.info" itemprop="item"><span itemprop="name">Главная</span></a>
+                                <a href="index.html" itemprop="item"><span itemprop="name">Главная</span></a>
                                 <meta itemprop="position" content="1">
                             </li>
                         </ul>
@@ -680,9 +680,9 @@
                                         <a href="#"><span class="author">Парк</span></a>
                                         <span class="date">3 мин. назад</span>
                                     </div>
-                                    <a href="#" class="text">Свист коробки передач ваз 21099</a>
+                                    <a href="question.html" class="text">Свист коробки передач ваз 21099</a>
                                 </div>
-                                <a href="#" class="answers">
+                                <a href="question.html#answers" class="answers">
                                     <i class="fa fa-comments-o"></i>
                                     <span class="count">0</span>
                                 </a>
@@ -696,9 +696,9 @@
                                         <a href="#"><span class="author">Alexander</span></a>
                                         <span class="date">2 часа назад</span>
                                     </div>
-                                    <a href="#" class="text">Можно ли ездить со сломанной передней пружиной?</a>
+                                    <a href="question.html" class="text">Можно ли ездить со сломанной передней пружиной?</a>
                                 </div>
-                                <a href="#" class="answers">
+                                <a href="question.html#answers" class="answers">
                                     <i class="fa fa-comments"></i>
                                     <span class="count">23</span>
                                 </a>
@@ -712,12 +712,12 @@
                                         <a href="#"><span class="author">Muph1984</span></a>
                                         <span class="date">30 августа</span>
                                     </div>
-                                    <a href="#" class="text">
+                                    <a href="question.html" class="text">
                                         Надо ли делать развал схождение после замены
                                         сальников рулевой колонки колонки колонки на ваз 2106?
                                     </a>
                                 </div>
-                                <a href="#" class="answers">
+                                <a href="question.html#answers" class="answers">
                                     <i class="fa fa-comments"></i>
                                     <span class="count">2 213</span>
                                 </a>
@@ -746,11 +746,11 @@
                                         <span class="count">121 334</span>
                                     </div>
                                 </div>
-                                <a href="#">
+                                <a href="page.html">
                                     <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
-                                    <a href="#" class="text">
+                                    <a href="page.html" class="text">
                                         Замена сайлентблоков передних (нижних верхних)
                                         рычагов на автомобилях ВАЗ-2101, ВАЗ-2102, ВАЗ-2103,
                                         ВАЗ-2104, ВАЗ-2105, ВАЗ-2106, ВАЗ-2107
@@ -769,11 +769,11 @@
                                         <span class="count">122 443</span>
                                     </div>
                                 </div>
-                                <a href="#">
+                                <a href="page.html">
                                     <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
-                                    <a href="#" class="text">
+                                    <a href="page.html" class="text">
                                         Замена охлаждающей жидкости (антифриза или тосола)
                                         в автомобиле ВАЗ-2101, ВАЗ-2104, ВАЗ-2105, ВАЗ-2106, ВАЗ-2107
                                     </a>
@@ -791,11 +791,11 @@
                                         <span class="count">32 453</span>
                                     </div>
                                 </div>
-                                <a href="#">
+                                <a href="page.html">
                                     <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
-                                    <a href="#" class="text">
+                                    <a href="page.html" class="text">
                                         Замена радиатора печки на автомобиле ВАЗ-2101,
                                         ВАЗ-2102, ВАЗ-2106, ВАЗ-2107
                                     </a>
@@ -904,11 +904,11 @@
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">1 минуту назад</span>
-                                        <a href="#" class="reply-link pull-right">
+                                        <a href="page.html" class="reply-link pull-right">
                                             <i class="fa fa-reply fa-flip-horizontal"></i>
                                         </a>
                                     </div>
-                                    <a href="#" class="text">
+                                    <a href="page.html#comment-1" class="text">
                                         Да, действительно, верхняя опора требует срочной замены.
                                         В противном случае, шток амортизационной стойки может
                                         в один прекрасный момент упереться в ...
@@ -925,11 +925,11 @@
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">Сегодня в 12:23</span>
-                                        <a href="#" class="reply-link pull-right">
+                                        <a href="page.html" class="reply-link pull-right">
                                             <i class="fa fa-reply fa-flip-horizontal"></i>
                                         </a>
                                     </div>
-                                    <a href="#" class="text">
+                                    <a href="page.html#comment-2" class="text">
                                         В подобной ситуации трудно назвать причину без осмотра
                                         и проверки двигателя. Довольно странно всё ...
                                     </a>
@@ -945,11 +945,11 @@
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">23 августа</span>
-                                        <a href="#" class="reply-link pull-right">
+                                        <a href="page.html" class="reply-link pull-right">
                                             <i class="fa fa-reply fa-flip-horizontal"></i>
                                         </a>
                                     </div>
-                                    <a href="#" class="text">
+                                    <a href="page.html#comment-3" class="text">
                                         Передние тормозные шланги от автомобилей Ваз не
                                         подходят на автомобили Дэу Нексия и Дэу Ланос. Так же ...
                                     </a>
@@ -996,7 +996,7 @@
                                         При использовании авторских статей
                                         ссылка на сайт обязательна.
                                         <span class="without-enter">
-                                            © <a href="#" class="active">www.avtorem.info</a> 2010 - 2016
+                                            © <a href="index.html" class="active">www.avtorem.info</a> 2010 - 2016
                                         </span>
                                     </div>
                                     <div class="social-links">
@@ -1026,7 +1026,7 @@
                                 <li><a href="category.html">Статьи</a></li>
                                 <li><a href="category.html">Советы</a></li>
                                 <li><a href="category.html">Гараж</a></li>
-                                <li><a href="#">Вопрос-ответ</a></li>
+                                <li><a href="questions.html">Вопрос-ответ</a></li>
                                 <li><a href="#">Бортовой журнал</a></li>
                             </ul>
                         </nav>
