--- a/app/contacts.html
+++ b/app/contacts.html
@@ -606,16 +606,16 @@
                                     ответить как можно быстрее.
                                 </div>
                                 <form action="#" id="contact-form">
-                                    <div class="form-group">
+                                    <div class="form-group" title="Имя *">
                                         <input name="name" type="text" placeholder="Имя *">
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group" title="Email *">
                                         <input name="email" type="text" placeholder="Email *">
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group" title="Тема письма">
                                         <input name="subject" type="text" placeholder="Тема письма">
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group" title="Текст письма *">
                                         <textarea name="text" rows="5" placeholder="Текст письма *"></textarea>
                                     </div>
                                     <div class="form-group input-group">
