--- a/app/page.html
+++ b/app/page.html
@@ -676,7 +676,7 @@
                         <section id="related-pages" class="widget widget-related">
                             <h3>Читайте также:</h3>
                             <div class="row">
-                                <div class="item col-md-3">
+                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
                                     <a href="page.html">
                                         <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
                                     </a>
@@ -684,7 +684,7 @@
                                         Ремонт ключа трещотки своими руками
                                     </a>
                                 </div>
-                                <div class="item col-md-3">
+                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
                                     <a href="page.html">
                                         <img src="img/uploads/articles/statya-2.jpg" alt="" title="" class="item-image">
                                     </a>
@@ -693,7 +693,7 @@
                                         Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
                                     </a>
                                 </div>
-                                <div class="item col-md-3">
+                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
                                     <a href="page.html">
                                         <img src="img/uploads/articles/statya-3.jpg" alt="" title="" class="item-image">
                                     </a>
@@ -704,7 +704,7 @@
                                         Chevrolet Lanos, Daewoo Sens
                                     </a>
                                 </div>
-                                <div class="item col-md-3">
+                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
                                     <a href="page.html">
                                         <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
                                     </a>
