Адаптивность виджета "Читать далее".

--- a/app/page.html
+++ b/app/page.html
@@ -676,41 +676,49 @@
                         <section id="related-pages" class="widget widget-related">
                             <h3>Читайте также:</h3>
                             <div class="row">
-                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <a href="page.html">
-                                        <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
-                                    </a>
-                                    <a href="page.html" class="text">
-                                        Ремонт ключа трещотки своими руками
-                                    </a>
+                                <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
+                                    <div class="item">
+                                        <a href="page.html">
+                                            <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
+                                        </a>
+                                        <a href="page.html" class="text">
+                                            Ремонт ключа трещотки своими руками
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <a href="page.html">
-                                        <img src="img/uploads/articles/statya-2.jpg" alt="" title="" class="item-image">
-                                    </a>
-                                    <a href="page.html" class="text">
-                                        Замена рычага передней подвески на автомобиле Daewoo Lanos,
-                                        Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
-                                    </a>
+                                <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
+                                    <div class="item">
+                                        <a href="page.html">
+                                            <img src="img/uploads/articles/statya-2.jpg" alt="" title="" class="item-image">
+                                        </a>
+                                        <a href="page.html" class="text">
+                                            Замена рычага передней подвески на автомобиле Daewoo Lanos,
+                                            Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <a href="page.html">
-                                        <img src="img/uploads/articles/statya-3.jpg" alt="" title="" class="item-image">
-                                    </a>
-                                    <a href="page.html" class="text">
-                                        Устраняем люфт и дребезжание ручки переключения
-                                        передач или замена уплотняющего кольца рычага
-                                        кпп на автомобилях Daewoo Lanos, Daewoo Nexia,
-                                        Chevrolet Lanos, Daewoo Sens
-                                    </a>
+                                <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
+                                    <div class="item">
+                                        <a href="page.html">
+                                            <img src="img/uploads/articles/statya-3.jpg" alt="" title="" class="item-image">
+                                        </a>
+                                        <a href="page.html" class="text">
+                                            Устраняем люфт и дребезжание ручки переключения
+                                            передач или замена уплотняющего кольца рычага
+                                            кпп на автомобилях Daewoo Lanos, Daewoo Nexia,
+                                            Chevrolet Lanos, Daewoo Sens
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="item col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <a href="page.html">
-                                        <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
-                                    </a>
-                                    <a href="page.html" class="text">
-                                        Ремонт ключа трещотки своими руками
-                                    </a>
+                                <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
+                                    <div class="item">
+                                        <a href="page.html">
+                                            <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
+                                        </a>
+                                        <a href="page.html" class="text">
+                                            Ремонт ключа трещотки своими руками
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </section>
@@ -852,12 +860,12 @@
                                                     </div>
                                                     <div class="container-body comment-text">
                                                         <p>
-                                                            Для начала могу посоветовать промыть
-                                                            дроссельную заслонку и почистить ДХХ
-                                                            (датчик холостого хода). Это можно сделать
-                                                            самостоятельно, предварительно прочитав вот
-                                                            эту статью. После чего, следует проверить
-                                                            и промыть!
+                                                            У меня была точно такая проблема.
+                                                        </p>
+                                                        <p>
+                                                            Спасибо автору за решение!
+                                                            <br>
+                                                            Помогло.
                                                         </p>
                                                         <button class="reply active">
                                                             <i class="fa fa-reply fa-flip-horizontal"></i>
