Цвет меню пользователя.

--- a/app/index.html
+++ b/app/index.html
@@ -94,10 +94,10 @@
             <div class="title">Информация</div>
             <ul class="menu info-menu">
                 <li><a href="#">Правила сайта</a></li>
-                <li><a href="#">ЧаВо</a></li>
-                <li><a href="#">Награды</a></li>
                 <li><a href="#">Как задать вопрос?</a></li>
                 <li><a href="#">Как создать статью?</a></li>
+                <li><a href="#">ЧаВо</a></li>
+                <li><a href="#">Реклама на сайте</a></li>
             </ul>
             <ul class="menu contact-menu m-t-20">
                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
@@ -448,10 +448,10 @@
                             <div class="pull-right hidden-xs hidden-sm">
                                 <ul class="menu info-menu">
                                     <li><a href="#">Правила сайта</a></li>
-                                    <li><a href="#">ЧаВо</a></li>
-                                    <li><a href="#">Награды</a></li>
                                     <li><a href="#">Как задать вопрос?</a></li>
                                     <li><a href="#">Как создать статью?</a></li>
+                                    <li><a href="#">ЧаВо</a></li>
+                                    <li><a href="#">Реклама на сайте</a></li>
                                 </ul>
                                 <i class="info-icon fa fa-info-circle pull-right"></i>
                             </div>
@@ -654,7 +654,7 @@
                                                     <span class="count" itemprop="commentCount">12 222</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count active" title="Сколько пользователей сохранили">
+                                            <div class="saved-count" title="Сколько пользователей сохранили">
                                                 <i class="fa fa-heart"></i>
                                                 <span>122 222</span>
                                             </div>
@@ -1353,10 +1353,10 @@
                         <div class="title">Информация</div>
                         <ul class="menu info-menu">
                             <li><a href="#">Правила сайта</a></li>
-                            <li><a href="#">ЧаВо</a></li>
-                            <li><a href="#">Награды</a></li>
                             <li><a href="#">Как задать вопрос?</a></li>
                             <li><a href="#">Как создать статью?</a></li>
+                            <li><a href="#">ЧаВо</a></li>
+                            <li><a href="#">Реклама на сайте</a></li>
                         </ul>
                         <nav>
                             <ul class="menu contact-menu">
