Адаптивность комментариев. Изменения в меню.

--- a/app/index.html
+++ b/app/index.html
@@ -654,7 +654,7 @@
                                                     <span class="count" itemprop="commentCount">12 222</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count" title="Сколько пользователей сохранили">
+                                            <div class="saved-count active" title="Сколько пользователей сохранили">
                                                 <i class="fa fa-heart"></i>
                                                 <span>122 222</span>
                                             </div>
@@ -737,8 +737,8 @@
                                                     <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count active" title="Сколько пользователей сохранили">
-                                                <i class="fa fa-heart"></i>
+                                            <div class="saved-count" title="Сколько пользователей сохранили">
+                                                <i class="fa fa-heart-o"></i>
                                                 <span>1</span>
                                             </div>
 
@@ -817,8 +817,8 @@
                                                     <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count active" title="Сколько пользователей сохранили">
-                                                <i class="fa fa-heart"></i>
+                                            <div class="saved-count" title="Сколько пользователей сохранили">
+                                                <i class="fa fa-heart-o"></i>
                                                 <span>1</span>
                                             </div>
 
@@ -1306,10 +1306,10 @@
                     <div class="col-lg-3 col-md-4 col-sm-12">
                         <div class="first-column">
                             <div class="row">
-                                <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
-                                <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
                                         При использовании авторских статей
                                         ссылка на сайт обязательна.
