--- a/app/category.html
+++ b/app/category.html
@@ -94,10 +94,10 @@
             <div class="title">Информация</div>
             <ul class="menu info-menu">
                 <li><a href="#">Правила сайта</a></li>
-                <li><a href="#">ЧаВо</a></li>
-                <li><a href="#">Награды</a></li>
                 <li><a href="#">Как задать вопрос?</a></li>
                 <li><a href="#">Как создать статью?</a></li>
+                <li><a href="#">ЧаВо</a></li>
+                <li><a href="#">Реклама на сайте</a></li>
             </ul>
             <ul class="menu contact-menu m-t-20">
                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
@@ -448,10 +448,10 @@
                             <div class="pull-right hidden-xs hidden-sm">
                                 <ul class="menu info-menu">
                                     <li><a href="#">Правила сайта</a></li>
-                                    <li><a href="#">ЧаВо</a></li>
-                                    <li><a href="#">Награды</a></li>
                                     <li><a href="#">Как задать вопрос?</a></li>
                                     <li><a href="#">Как создать статью?</a></li>
+                                    <li><a href="#">ЧаВо</a></li>
+                                    <li><a href="#">Реклама на сайте</a></li>
                                 </ul>
                                 <i class="info-icon fa fa-info-circle pull-right"></i>
                             </div>
@@ -733,8 +733,8 @@
                                                     <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count active" title="Сколько пользователей сохранили">
-                                                <i class="fa fa-heart"></i>
+                                            <div class="saved-count" title="Сколько пользователей сохранили">
+                                                <i class="fa fa-heart-o"></i>
                                                 <span>1</span>
                                             </div>
 
@@ -785,7 +785,7 @@
                                             электрика, сантехника есть свой любимый инструмент,
                                             который сделан именно под его руку и безотказно
                                             служит уже не один год. Когда такой инструмент (ключ,
-                                            отвёртка, пассатижи, молоток и т.д.) ломается, приходит
+                                            отвёртка, пассатижи, молоток и и т.д.) ломается, приходит
                                             в негодность, то настроение от такого события резко
                                             ухудшается. Тут тебе и потеря верного соратника, и
                                             дополнительные финансовые траты... Знакомо? Так, например,
@@ -813,8 +813,8 @@
                                                     <i class="fa fa-comments-o"></i><span class="count" itemprop="commentCount">12</span>
                                                 </a>
                                             </div>
-                                            <div class="saved-count active" title="Сколько пользователей сохранили">
-                                                <i class="fa fa-heart"></i>
+                                            <div class="saved-count" title="Сколько пользователей сохранили">
+                                                <i class="fa fa-heart-o"></i>
                                                 <span>1</span>
                                             </div>
 
@@ -1224,10 +1224,10 @@
                     <div class="col-lg-3 col-md-4 col-sm-12">
                         <div class="first-column">
                             <div class="row">
-                                <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
-                                <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
                                         При использовании авторских статей
                                         ссылка на сайт обязательна.
@@ -1271,10 +1271,10 @@
                         <div class="title">Информация</div>
                         <ul class="menu info-menu">
                             <li><a href="#">Правила сайта</a></li>
-                            <li><a href="#">ЧаВо</a></li>
-                            <li><a href="#">Награды</a></li>
                             <li><a href="#">Как задать вопрос?</a></li>
                             <li><a href="#">Как создать статью?</a></li>
+                            <li><a href="#">ЧаВо</a></li>
+                            <li><a href="#">Реклама на сайте</a></li>
                         </ul>
                         <nav>
                             <ul class="menu contact-menu">
