--- a/app/questions.html
+++ b/app/questions.html
@@ -94,10 +94,10 @@
             <div class="title">Информация</div>
             <ul class="menu info-menu">
                 <li><a href="#">Правила сайта</a></li>
-                <li><a href="#">ЧаВо</a></li>
-                <li><a href="#">Награды</a></li>
                 <li><a href="#">Как задать вопрос?</a></li>
                 <li><a href="#">Как создать статью?</a></li>
+                <li><a href="#">ЧаВо</a></li>
+                <li><a href="#">Реклама на сайте</a></li>
             </ul>
             <ul class="menu contact-menu m-t-20">
                 <li><a href="contacts.html"><i class="fa fa-envelope"></i>Контакты</a></li>
@@ -448,10 +448,10 @@
                             <div class="pull-right hidden-xs hidden-sm">
                                 <ul class="menu info-menu">
                                     <li><a href="#">Правила сайта</a></li>
-                                    <li><a href="#">ЧаВо</a></li>
-                                    <li><a href="#">Награды</a></li>
                                     <li><a href="#">Как задать вопрос?</a></li>
                                     <li><a href="#">Как создать статью?</a></li>
+                                    <li><a href="#">ЧаВо</a></li>
+                                    <li><a href="#">Реклама на сайте</a></li>
                                 </ul>
                                 <i class="info-icon fa fa-info-circle pull-right"></i>
                             </div>
@@ -1224,10 +1224,10 @@
                     <div class="col-lg-3 col-md-4 col-sm-12">
                         <div class="first-column">
                             <div class="row">
-                                <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
-                                <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
                                         При использовании авторских статей
                                         ссылка на сайт обязательна.
@@ -1271,10 +1271,10 @@
                         <div class="title">Информация</div>
                         <ul class="menu info-menu">
                             <li><a href="#">Правила сайта</a></li>
-                            <li><a href="#">ЧаВо</a></li>
-                            <li><a href="#">Награды</a></li>
                             <li><a href="#">Как задать вопрос?</a></li>
                             <li><a href="#">Как создать статью?</a></li>
+                            <li><a href="#">ЧаВо</a></li>
+                            <li><a href="#">Реклама на сайте</a></li>
                         </ul>
                         <nav>
                             <ul class="menu contact-menu">
